<resources>
    <string name="app_name">ChronLog</string>
    <string name="title_activity_login">Entrar</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cancelar">cancelar</string>
    <string name="dash">dash</string>
    <string name="logo">logo</string>
    <string name="desbloquear">desbloquear</string>
    <string name="serial">serial</string>
    <string name="serial_configurado">Serial Configurado!</string>
    <string name="reset_zoom">Reset Zoom</string>
    <string name="travar_eixo_x">Travar Eixo X</string>
    <string name="travar_eixo_y">Travar Eixo Y</string>
    <string name="destravar_x">Liberar Eixo X</string>
    <string name="destravar_y">Liberar Eixo Y</string>
    <string name="reset">reset</string>
    <string name="compartilhar">compartilhar</string>
    <string name="salvar">salvar</string>
    <string name="zoom">Zoom</string>
    <string name="grafico">gráfico</string>
    <string name="dispositivos">dispositivos</string>
    <string name="title">title</string>
    <string name="configurar_data">Configurar Data</string>
    <string name="configurar_horario">Configurar Horario</string>
    <string name="resgatar_dados">Resgatar Dados</string>
    <string name="configurar">Configurar</string>
    <string name="digite_a_data_ex_10_10_2019">Digite a data: (ex.: 10/10/2019)</string>
    <string name="digite_a_hora_ex_10_23_35">digite a hora (ex.:10:23:35)</string>
    <string name="chronlog">ChronLog</string>
    <string name="devices">devices</string>
    <string name="configurando">configurando</string>
    <string name="aparelhos">aparelhos</string>
    <string name="iconeappbar">Ícone App Bar</string>
    <string name="nao_conectado">Não Conectado!</string>
    <string name="conectando">conectando</string>
    <string name="analise_de_dados">Análise de Dados</string>
    <string name="eeprom">EEPROM</string>
    <string name="gerenciar_dados">Gerenciar Dados</string>
    <string name="sincronizar_data">Sincronizar\nData</string>
    <string name="_10_10_2019">10/10/2019</string>
    <string name="sincronizar_hor_rio">Sincronizar\nHorário</string>
    <string name="_10_23_35">10:23:35</string>
    <string name="enviar">ENVIAR</string>
    <string name="segundos">segundos</string>
    <string name="use_sincronizar_data_hor_rio_para_configurar_utilizando_a_data_e_hor_rio_do_celular">Use sincronizar data/horário para configurar utilizando a data e horário do celular.</string>
    <string name="hh_mm_ss">hh:mm:ss</string>
    <string name="configurando___">configurando…</string>
    <string name="aguarde">aguarde</string>
    <string name="atencao_">Atenção!</string>
    <string name="ajustes">ajustes</string>
    <string name="log_title">log title</string>
    <string name="arquivos_do_sd">Arquivos do SD\n(modelo)</string>
    <string name="arquivos_do_dispositivo">Arquivos do Dispositivo</string>
    <string name="refreshicon">refreshIcon</string>
    <string name="peso">peso</string>
    <string name="calendar_icon">calendar icon</string>
    <string name="dd_mm_aaaa">dd/mm/aaaa</string>
    <string name="modo">modo</string>
    <string name="aguarde_estamos_abrindo_seu_arquivo">Abrindo arquivo, aguarde por favor…</string>
    <string name="deseja_salvar_ou_compartilhar_o_log">deseja salvar ou compartilhar o log?</string>
    <string name="deletar">deletar</string>
    <string name="tempo_de_aquisi_o">Tempo de Aquisição</string>
    <string name="hor_rio">Horário</string>
    <string name="data">Data</string>
    <string name="log_x">LOG X</string>
    <string name="sobre">Sobre</string>
    <string name="app_version">Chronlog Ver 2.0.0</string>
    <string name="sobre_message">
            Aplicativo desenvolvido para utilização em conjunto com os registradores de dados Chronteck.\n
            \nConsulte produtos compatíveis no site
            \nwww.chronteck.com"</string>
    <string name="t1">T1</string>
    <string name="t2">T2</string>
    <string name="t3">T3</string>
    <string name="t4">T4</string>
    <string name="vMin">vMIN</string>
    <string name="mMed">vMED</string>
    <string name="mMax">vMAX</string>
    <string name="thd">THD</string>
    <string name="v">V</string>
    <string name="i">I</string>
    <string name="p">P</string>
    <string name="e">E</string>
    <string name="fp">FP</string>
    <string name="dht">DHT</string>
    <string name="m1">M1</string>
    <string name="m2">M2</string>
    <string name="m3">M3</string>
    <string name="m4">M4</string>
    <string name="m5">M5</string>
    <string name="m6">M6</string>
    <string name="m7">M7</string>
    <string name="m8">M8</string>
    <string-array name="modosTermopar">
        <item>K</item>
        <item>J</item>
        <item>N</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>E</item>
        <item>B</item>
    </string-array>
</resources>
