<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/include"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/myScrollView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/containerContent"
                android:layout_width="match_parent"

                android:layout_height="380dp">

                <EditText
                    android:id="@+id/dataInput"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="25dp"
                    android:hint="@string/dd_mm_aaaa"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/syncData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/dataInput"
                    android:layout_alignBottom="@+id/dataInput"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="1dp"
                    android:layout_toEndOf="@+id/dataInput"
                    app:layout_constraintBottom_toBottomOf="@+id/dataInput"
                    app:layout_constraintEnd_toStartOf="@+id/labelSyncData"
                    app:layout_constraintStart_toEndOf="@+id/dataInput"
                    app:layout_constraintTop_toTopOf="@+id/dataInput" />

                <TextView
                    android:id="@+id/labelSyncData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/syncData"
                    android:layout_alignBottom="@+id/syncData"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="0dp"
                    android:layout_toEndOf="@+id/syncData"
                    android:text="@string/sincronizar_data"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/syncData"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/syncData"
                    app:layout_constraintTop_toTopOf="@+id/syncData" />

                <Button
                    android:id="@+id/configDataBtn"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dataInput"
                    android:layout_alignStart="@+id/dataInput"
                    android:layout_alignEnd="@+id/labelSyncData"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="0dp"
                    android:text="@string/configurar"
                    app:layout_constraintEnd_toEndOf="@+id/labelSyncData"
                    app:layout_constraintStart_toStartOf="@+id/dataInput"
                    app:layout_constraintTop_toBottomOf="@+id/dataInput" />

                <EditText
                    android:id="@+id/horaInput"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/configDataBtn"
                    android:layout_alignStart="@+id/configDataBtn"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginEnd="25dp"
                    android:hint="@string/hh_mm_ss"
                    android:inputType="number"
                    android:paddingEnd="0dp"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/configDataBtn" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/syncHora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/horaInput"
                    android:layout_alignBottom="@+id/horaInput"

                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="0dp"
                    android:layout_toEndOf="@+id/horaInput"
                    app:layout_constraintBottom_toBottomOf="@+id/horaInput"
                    app:layout_constraintEnd_toStartOf="@+id/textView2"
                    app:layout_constraintStart_toEndOf="@+id/horaInput"
                    app:layout_constraintTop_toTopOf="@+id/horaInput" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/horaInput"
                    android:layout_alignEnd="@+id/configDataBtn"
                    android:layout_alignBottom="@+id/horaInput"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_toEndOf="@+id/syncHora"
                    android:text="Sincronizar\nHorário"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/syncHora"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/syncHora"
                    app:layout_constraintTop_toTopOf="@+id/syncHora" />

                <Button
                    android:id="@+id/configHorarioBtn"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/horaInput"
                    android:layout_alignStart="@+id/horaInput"
                    android:layout_alignEnd="@+id/textView2"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="0dp"
                    android:text="@string/configurar"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="@+id/horaInput"
                    app:layout_constraintTop_toBottomOf="@+id/horaInput" />

                <EditText
                    android:id="@+id/aquisitionInput"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/configHorarioBtn"
                    android:layout_alignStart="@+id/configHorarioBtn"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="22dp"
                    android:ems="10"
                    android:hint="@string/segundos"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toStartOf="@+id/spinnerModoAquisicao"
                    app:layout_constraintStart_toStartOf="@+id/configHorarioBtn"
                    app:layout_constraintTop_toBottomOf="@+id/configHorarioBtn" />

                <Spinner
                    android:id="@+id/spinnerModoAquisicao"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/aquisitionInput"
                    android:layout_alignEnd="@+id/configHorarioBtn"
                    android:layout_alignBottom="@+id/aquisitionInput"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_toEndOf="@+id/aquisitionInput"
                    app:layout_constraintBottom_toBottomOf="@+id/aquisitionInput"
                    app:layout_constraintEnd_toEndOf="@+id/configHorarioBtn"
                    app:layout_constraintStart_toEndOf="@+id/aquisitionInput"
                    app:layout_constraintTop_toTopOf="@+id/aquisitionInput" />

                <Button
                    android:id="@+id/configTermoparTypeAndModeBtn"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/aquisitionInput"
                    android:layout_alignStart="@+id/aquisitionInput"
                    android:layout_alignEnd="@+id/spinnerModoAquisicao"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="0dp"
                    android:text="@string/configurar"
                    app:layout_constraintEnd_toEndOf="@+id/spinnerModoAquisicao"
                    app:layout_constraintStart_toStartOf="@+id/aquisitionInput"
                    app:layout_constraintTop_toBottomOf="@+id/aquisitionInput" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/spinnerModoAquisicao"
                    android:layout_alignStart="@+id/spinnerModoAquisicao"
                    android:layout_alignEnd="@+id/configHorarioBtn"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="3dp"
                    android:text="Tipo de Termopar"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/aquisitionInput"
                    android:layout_alignTop="@+id/textView5"
                    android:layout_alignEnd="@+id/aquisitionInput"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:text="@string/tempo_de_aquisi_o"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="44dp"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/syncHora"
                    android:layout_alignStart="@+id/horaInput"
                    android:layout_alignEnd="@+id/horaInput"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/hor_rio"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/syncData"
                    android:layout_alignStart="@+id/dataInput"
                    android:layout_alignEnd="@+id/dataInput"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/data"
                    android:textSize="12sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="8dp"
                android:gravity="top"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/use_sincronizar_data_hor_rio_para_configurar_utilizando_a_data_e_hor_rio_do_celular"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryDark"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/containerContent"
                app:layout_constraintStart_toStartOf="@+id/containerContent"
                app:layout_constraintTop_toBottomOf="@+id/configTermoparTypeAndModeBtn" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>